--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "submodules/fenix-ui-table-creator"]
 	path = submodules/fenix-ui-table-creator
 	url = ../../FENIX-Platform/fenix-ui-table-creator.git
+[submodule "submodules/fenix-ui-datamanagement-commons"]
+	path = submodules/fenix-ui-datamanagement-commons
+	url = https://github.com/FENIX-Platform/fenix-ui-datamanagement-commons.git
